<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notebookPopupConstraintLayout"
    android:layout_width="350dp"
    android:layout_height="200dp"
    android:background="@color/darkOrange">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="65dp"
            android:layout_height="39dp"
            android:layout_marginStart="36dp"

            android:layout_marginTop="61dp"
            android:text="@string/title_text"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/notebookPopupCreateButton"
            android:layout_width="120dp"
            android:layout_height="51dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/darkBlue"
            android:text="@string/create_button"
            app:layout_constraintStart_toEndOf="@+id/notebookPopupCancelButton"
            app:layout_constraintTop_toBottomOf="@+id/notebookPopupEditText" />

        <TextView
            android:id="@+id/notebookPopupHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="102dp"
            android:layout_marginTop="16dp"
            android:text="@string/new_notebook_text"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/notebookPopupCancelButton"
            android:layout_width="120dp"
            android:layout_height="51dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/darkBlue"
            android:text="@string/cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/notebookPopupEditText"
            android:layout_width="215dp"
            android:layout_height="47dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="7dp"
            android:background="@color/darkOrange"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/notebookPopupHeaderTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>