<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notebookPopupConstraintLayout"
    android:layout_width="360dp"
    android:layout_height="200dp"
    android:background="@color/darkOrange">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/notebookEditTitleEditText"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="7dp"
            android:background="@color/darkOrange"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewNewTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/notebookEditTitleSaveButton"
            android:layout_width="120dp"
            android:layout_height="51dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/darkBlue"
            android:text="@string/save_button"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/notebookEditTitleCancelButton"
            app:layout_constraintTop_toBottomOf="@+id/notebookEditTitleEditText" />

        <Button
            android:id="@+id/notebookEditTitleCancelButton"
            android:layout_width="120dp"
            android:layout_height="51dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/darkBlue"
            android:text="@string/cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notebookEditTitleEditText" />

        <TextView
            android:id="@+id/textViewNewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="68dp"
            android:text="@string/new_title_text"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>